Revert "Hoan thanh phan Header"
This reverts commit 431eb96a797d2ae0dc69bd716587dbb20af7d4fb.

--- a/css/style.less
+++ b/css/style.less
@@ -13,8 +13,6 @@
 @color8 :#777777;
 @color9 :#e8645a;
 @color10:#497e79;
-@color11:#4bcaff;
-@color12:#515f67;
 .container-fluid{
 	padding: 0 !important;
 }
@@ -27,9 +25,7 @@
 .absolute{
 	position: absolute;
 }
-.underline{
-	text-decoration: underline;
-}
+
 .text-right{
 	text-align: right;
 }
@@ -112,12 +108,6 @@
 .c10{
 	color:@color10 !important;
 }
-.c11{
-	color:@color11 !important;
-}
-.c12{
-	color:@color12 !important;
-}
 .bgr1{
 	background-color: @color1;
 }
@@ -129,9 +119,6 @@
 }
 .bgr6{
 	background-color: @color6;
-}
-.bgr11{
-	background-color: @color11;
 }
 .left{
 	float: left;
@@ -487,7 +474,7 @@ ul.dropdown-menu{
 
 
 .top-2{
-	// background: url('../images/2-top-bg.png') center center /cover;
+	background: url('../images/2-top-bg.png') center center /cover;
 }
 
 .nav-2{
@@ -495,45 +482,12 @@ ul.dropdown-menu{
 		li{
 			float: left;
 			list-style-type: none;
-			margin-left: 15px;
-			padding: 5px;
-			border: 2px solid transparent;
-			&:hover{
-				border: 2px solid #4bcaff;
-				a{
-					color: #4bcaff;
-				}
-			}
 			a{
 				text-decoration: none;
 				font-size: 14px;
 				text-transform: uppercase;
 				color: #fff;
-				font-weight: bold;
-			}
-		}
-	}
-}
-
-.portfolio-nav-2{
-	ul{
-		li{
-			float: left;
-			list-style-type: none;
-			margin-left: 15px;
-			padding: 5px;
-			border: 2px solid transparent;
-			&:hover{
-				border: 2px solid #4bcaff;
-				a{
-					color: #4bcaff;
-				}
-			}
-			a{
-				text-decoration: none;
-				font-size: 14px;
-				text-transform: uppercase;
-				color: #fff;
+				margin-left: 20px;
 				font-weight: bold;
 			}
 		}
@@ -541,85 +495,18 @@ ul.dropdown-menu{
 }
 
 .top-nav-2{
-	padding: 40px 0px 40px 0px;
+	padding: 50px 0px 50px 0px;
 	background-color: rgba(53, 63, 70, 0.6);
-	position: absolute;
-	left: 0;
-	right: 0;
-	z-index: 1;
-}
-.flexslider{
-	border: none !important;
-	position: relative;
-	margin:0px !important;
-	ul.slides{
-		li{
-			position: relative;
-		}
-	}
-}
-.flex-control-nav{
-	display: none !important;
 }
 
-.slider-sub{
-	position: absolute;
-	bottom: 200px;
-	left: 20%;
-	right: 20%;
-	z-index: 10;
-	color: #fff;
-	font-size: 32px;
-	font-weight: lighter;
-	text-transform: uppercase;
-	text-align: center;
-	span{
-		background-color: rgba(53, 63, 70, 0.6);
-		line-height: 50px;
-	}
-}
-img.line-2{
-	position: absolute; 
-}
-.services-2{
-	background-color: #4bcaff;
-	padding-top: 60px;
-	padding-bottom: 60px;
-	text-align: left;
-	color: #fff;
-	.services-2-title{
-		span{
-			color: #FFF;
-			font-size: 30px;
-			text-transform: uppercase;
-			font-weight: lighter;
-		}
-	}
-	.services-2-content{
-		margin-top: 20px;
-		span{
-			color: #fff;
-			font-size: 24px;
-			font-weight: bold;
-			text-transform: uppercase;
-		}
-		p{	
-			color:#fff;
-			font-size: 12px;
-		}
-	}
-}
-.portfolio-2{
-	padding-bottom: 60px;
-	padding-top: 60px;
-	background-color: #fff;
-}
 
-.title-2{
-	font-size: 30px;
-	font-weight: lighter;
-	text-transform: uppercase;
-}
+
+
+
+
+
+
+
 
 
 /* Medium devices (desktops, 992px and down) *//////////////////////////////////////////////////////////////
